--- a/src/index.css
+++ b/src/index.css
@@ -306,6 +306,11 @@ main {
   padding: 0 5px;
 }
 
+.section .content {
+  max-height: 100px;
+  overflow: hidden;
+}
+
 .section figure img {
   width: 100%;
   height: 100%;
@@ -483,14 +488,15 @@ main {
 .postPage .top {
   height: 250px;
   position: relative;
-  border-radius: 0 0 16px 16px;
+  border-radius: 16px;
+  margin: 10px 20px 0 20px;
 }
 
 .postPage .headerImg {
   background-color: var(--secondary);
   width: 100%;
   height: 100%;
-  border-radius: 0 0 16px 16px;
+  border-radius: 16px;
   overflow: hidden;
 }
 
@@ -510,7 +516,7 @@ main {
   align-items: center;
   background-color: var(--new-spec);
   backdrop-filter: blur(10px);
-  border-radius: 0 5px 5px 0;
+  border-radius: 16px;
 }
 
 .postPage .back p {
@@ -690,7 +696,6 @@ footer {
   }
 
   .postPage .top {
-    border: 1px solid black;
     height: 150px;
     position: relative;
   }
