--- a/src/index.css
+++ b/src/index.css
@@ -640,6 +640,7 @@ main {
 .aboutPage .head p {
   color: var(--white);
   text-align: justify;
+  font-size: 1rem;
   width: 80%;
 }
 
@@ -657,6 +658,27 @@ main {
 .follow span {
   display: flex;
   gap: 10px;
+}
+
+.video {
+  padding: 90px 20px 70px 20px;
+}
+
+.nsmqVideos {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  row-gap: 20px;
+  column-gap: 20px;
+}
+
+iframe {
+  width: 100%;
+  height: 200px;
+  border-radius: 16px;
+}
+
+iframe:hover {
+  border: 2px solid var(--selection);
 }
 
 footer {
@@ -773,6 +795,20 @@ footer {
   .postPage .top {
     height: 150px;
     position: relative;
+  }
+
+  .aboutPage .head p {
+    color: var(--white);
+    text-align: justify;
+    font-size: .8rem;
+    width: 90%;
+  }
+
+  .video {
+    padding: 0 20px 70px 20px;
+  }
+  .nsmqVideos {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   }
 
   footer {
