--- a/src/index.css
+++ b/src/index.css
@@ -675,9 +675,10 @@ iframe {
   width: 100%;
   height: 200px;
   border-radius: 16px;
+  background-color: var(--sup-primary-color);
 }
 
-iframe:hover {
+iframe:is(:hover, :focus-within) {
   border: 2px solid var(--selection);
 }
 
